--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.10",
+    "@types/nodemailer": "^6.4.15",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
@@ -33,6 +34,7 @@
     "google-auth-library": "^9.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.10.3"
+    "mysql2": "^3.10.3",
+    "nodemailer": "^6.9.14"
   }
 }
