--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.3.1",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "google-auth-library": "^9.11.0",
     "heic-convert": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
